--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<body>
-	<img src="emili_01.jpg"/>
-	<img src="emili_02.jpg"/>
+		<div>
+	<img src="emili_01.jpg" width="50"/>
+		</div>
+		<div>
+	<img src="emili_02.jpg" width="50"/>
+		</div>
+		<div>
 	<img src="emili_03.jpg"/>
+		</div>
 	</body>
 </html>
