--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<style>
+.body {
+	background-image: url("emili_03.jpg");
+}
 	<body>
 		<div>
 	<img src="emili_01.jpg" width="50"/>
