--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 }
 	<body>
 		<div>
-	<img src="emili_01.jpg" width="50"/>
+	<img src="emili_01.jpg" width="50%"/>
 		</div>
 		<div>
-	<img src="emili_02.jpg" width="50"/>
+	<img src="emili_02.jpg" width="50%"/>
 		</div>
 		<div>
-	<img src="emili_03.jpg"/>
+	<img src="emili_03.jpg" width="50%"/>
 		</div>
 	</body>
 </html>
