--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <style>
 body {
-	background-image: url("emili_03.jpg");
+	background-color: #EFD7A6;
+	<!--	background-image: url("emili_03.jpg");-->
 }
 	<body>
 		<div>
