--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <style>
-body {
+.images {
 	background-color: #EFD7A6;
 	<!--	background-image: url("emili_03.jpg");-->
 }
 	<body>
+	<div class="images">
 		<div>
 	<img src="emili_01.jpg" width="50%"/>
 		</div>
@@ -15,5 +16,6 @@ body {
 		<div>
 	<img src="emili_03.jpg" width="50%"/>
 		</div>
+	</div>
 	</body>
 </html>
