--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <style>
-.images {
-	background-color: #EFD7A6;
+body {
 	<!--	background-image: url("emili_03.jpg");-->
 }
-	<body>
+<body style="background-color: #EFD7A6;">
 	<div class="images">
 		<div>
 	<img src="emili_01.jpg" width="50%"/>
