--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 	<div class="images">
 		<div>
 	<img src="emili_01.jpg" width="50%"/>
+	<span>Sample text</span>
 		</div>
 		<div>
 	<img src="emili_02.jpg" width="50%"/>
+	<span>Lapsen syntymämittojen mukaan tehty</span>
 		</div>
 		<div>
 	<img src="emili_03.jpg" width="50%"/>
