--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html>
 <style>
+.image-shadow {
+   box-shadow:0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19) 
+}
+
 </style>
 <body style="background-color: #EFD7A6;">
 	<div class="images">
-		<div>
+		<div class="image-shadow">
 	<img src="emili_01.jpg" width="50%"/>
 	<span>Sample text</span>
 		</div>
-		<div>
+		<div class="image-shadow">
 	<img src="emili_02.jpg" width="50%"/>
 	<span>Lapsen syntymämittojen mukaan tehty</span>
 		</div>
-		<div>
+		<div class="image-shadow">
 	<img src="emili_03.jpg" width="50%"/>
 		</div>
 	</div>
