--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <style>
 body {
-   background-image: url("emili_03.jpg");
+	<!--   background-image: url("emili_03.jpg");-->
 }
-.image-shadow {
+.image-shadow:hover {
    box-shadow:0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19) 
 }
 
