--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@ body {
 </style>
 <body style="background-color: #EFD7A6;">
 	<div class="images">
-		<div class="image-shadow">
-	<img src="emili_01.jpg" width="50%"/>
+		<div>
+	<img src="emili_01.jpg" width="40%" class="image-shadow"/>
 	<span>Sample text</span>
 		</div>
-		<div class="image-shadow">
-	<img src="emili_02.jpg" width="50%"/>
+		<div>
+	<img src="emili_02.jpg" width="40%" class="image-shadow"/>
 	<span>Lapsen syntymämittojen mukaan tehty</span>
 		</div>
-		<div class="image-shadow">
-	<img src="emili_03.jpg" width="50%"/>
+		<div>
+	<img src="emili_03.jpg" width="40%" class="image-shadow"/>
 		</div>
 	</div>
 	</body>
