Added more text

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+	<h1>Petit Emili</h1>
+	</br>
+	<span>
+Valmistan tilaustyönä Suloisia paino ja pituus pehmoja. Nallet ja puput on tehty lapsen syntymämittojen mukaan. Kankaat valitaan aina yhdessä tilaajan kanssa, jotta pehmosta tulee just sopiva ja omistajansa näköinen	
+	</span>
 <style>
 body {
 	<!--   background-image: url("emili_03.jpg");-->
@@ -13,7 +18,10 @@ body {
 	<div class="images">
 		<div>
 	<img src="emili_01.jpg" width="40%" class="image-shadow"/>
-	<span>Sample text</span>
+	<span>
+	Pienet kaksoset.
+	37cm, 1050g | 37cm, 1170g	
+	</span>
 		</div>
 		<div>
 	<img src="emili_02.jpg" width="40%" class="image-shadow"/>
