--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
-	<h1>Petit Emili</h1>
+	<h1>
+		<font face = "Apple Chancery, cursive" size = "4">
+		Petit Emili
+		</font>
+	</h1>
 	</br>
 	<span>
 Valmistan tilaustyönä Suloisia paino ja pituus pehmoja. Nallet ja puput on tehty lapsen syntymämittojen mukaan. Kankaat valitaan aina yhdessä tilaajan kanssa, jotta pehmosta tulee just sopiva ja omistajansa näköinen	
