--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<h1>
-		<font face = "Apple Chancery, cursive" size = "4">
+		<font face = "Courier" size = "4">
 		Petit Emili
 		</font>
 	</h1>
