--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<h1>
-		<font face = "Courier" size = "4">
+		<font face = "Courier" size = "7">
 		Petit Emili
 		</font>
 	</h1>
@@ -29,7 +29,7 @@ body {
 		</div>
 		<div>
 	<img src="emili_02.jpg" width="40%" class="image-shadow"/>
-	<span>Lapsen syntymämittojen mukaan tehty</span>
+	<span>33cm, 875g</span>
 		</div>
 		<div>
 	<img src="emili_03.jpg" width="40%" class="image-shadow"/>
