--- a/index.html
+++ b/index.html
@@ -19,16 +19,18 @@ body {
 
 </style>
 <body style="background-color: #EFD7A6;">
-	<div class="images">
-		<div>
+	<div class="row">
+		<div class="column">
 	<img src="emili_01.jpg" width="40%" class="image-shadow"/>
+	</br>
 	<span>
 	Pienet kaksoset.
 	37cm, 1050g | 37cm, 1170g	
 	</span>
 		</div>
-		<div>
+		<div class="column">
 	<img src="emili_02.jpg" width="40%" class="image-shadow"/>
+	</br>
 	<span>33cm, 875g</span>
 		</div>
 	</div>
