--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@ body {
 .image-shadow:hover {
    box-shadow:0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19) 
 }
+.rox {
+   display: flex;
+}
+.column {
+   flex: 50%;
+}
 
 </style>
 <body style="background-color: #EFD7A6;">
