--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@ body {
 .image-shadow:hover {
    box-shadow:0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19) 
 }
+*{
+   box-sizing: border-box;
+}
 .rox {
    display: flex;
 }
 .column {
    flex: 50%;
+   padding: 10px;
+   height: 300px;
 }
 
 </style>
