--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 		</font>
 	</h1>
 	</br>
-	<span>
+		<font face = "Courier" size = "4">
 Valmistan tilaustyönä Suloisia paino ja pituus pehmoja. Nallet ja puput on tehty lapsen syntymämittojen mukaan. Kankaat valitaan aina yhdessä tilaajan kanssa, jotta pehmosta tulee just sopiva ja omistajansa näköinen	
-	</span>
+		</font>
 <style>
 body {
 	<!--   background-image: url("emili_03.jpg");-->
@@ -32,17 +32,24 @@ body {
 <body style="background-color: #EFD7A6;">
 	<div class="row">
 		<div class="column">
-	<img src="emili_01.jpg" width="40%" class="image-shadow"/>
+	<img src="emili_01.jpg" width="100%" class="image-shadow"/>
 	</br>
-	<span>
+	<center>
+		<font face = "Courier" size = "4">
 	Pienet kaksoset.
 	37cm, 1050g | 37cm, 1170g	
-	</span>
+		</font>
+	</center>
 		</div>
 		<div class="column">
-	<img src="emili_02.jpg" width="40%" class="image-shadow"/>
+	<img src="emili_02.jpg" width="100%" class="image-shadow"/>
 	</br>
-	<span>33cm, 875g</span>
+	<center>
+		<font face = "Courier" size = "4">
+	Pikkukeskonen.
+	33cm, 875g
+		</font>
+	</center>
 		</div>
 	</div>
 	</body>
